# open-octopus-japan

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_query.py
Config/: Debug.xcconfig  Release.xcconfig  Tests.xcconfig
OctopusMenuBar.xcodeproj/: project.pbxproj
OctopusMenuBarPackage/Sources/OctopusMenuBarFeature/: ContentView.swift
cli/: pyproject.toml  server_entry.py
cli/src/open_octopus/: __init__.py  agent.py  cli.py  menubar.py  menubar_server.py
docs/: japan-api-reference.md
macos/Config/: Shared.xcconfig
macos/OctopusMenuBar.xcodeproj/xcshareddata/xcschemes/: OctopusMenuBar.xcscheme
macos/OctopusMenuBarPackage/Sources/OctopusMenuBarFeature/: ContentView.swift
scripts/: build-release.sh
src/open_octopus/: __init__.py  agent.py  cli.py  client.py  menubar.py  menubar_server.py  models.py
tests/: test_client.py  test_models.py
