[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-octopus"
version = "1.0.2"
description = "Async Python client for the Octopus Energy Japan GraphQL API. Consumption tracking, tariff info, CLI dashboard & AI agent."
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zishan", email = "zishan@example.com" }
]
keywords = [
    "octopus-energy",
    "octopus-energy-japan",
    "energy",
    "electricity",
    "api-client",
    "async",
    "graphql",
    "kraken",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.30.0",
]
menubar = [
    "pyobjc-framework-Cocoa>=10.0",
]
all = [
    "anthropic>=0.30.0",
    "pyobjc-framework-Cocoa>=10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
octopus = "open_octopus.cli:main"
octopus-ask = "open_octopus.agent:main"
octopus-menubar = "open_octopus.menubar:main"
octopus-server = "open_octopus.menubar_server:main"

[project.urls]
Homepage = "https://github.com/Greatdane/open-octopus-japan"
Documentation = "https://github.com/Greatdane/open-octopus-japan#readme"
Repository = "https://github.com/Greatdane/open-octopus-japan"
Issues = "https://github.com/Greatdane/open-octopus-japan/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/open_octopus"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
